Fixed bug with slides not centered

--- a/css/main.scss
+++ b/css/main.scss
@@ -131,7 +131,7 @@ main {
 }
 
 .swiper-slide {
-  width: 260px;
+  // width: 260px;
   height: 300px;
 }
 
